# worksonmymachine

./: .gitignore  DIAGNOSTIC_AND_RUNNER_SUMMARY.md  Dockerfile  FILE_STRUCTURE.md  LICENSE  QUICKSTART.md  README.md  USAGE_EXAMPLE.py  VALIDATION_REPORT.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
TITAN_env/evaluation/: __init__.py  runner.py  scoring.py  trajectory.py
TITAN_env/graders/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py
TITAN_env/interface/: __init__.py  action_mapping.py  llm_interface.py  models.py  openenv_wrapper.py
TITAN_env/server/: __init__.py  app.py
TITAN_env/tasks/: __init__.py  base_task.py  mission_descriptions.py  registry.py  task_easy.py  task_hard.py  task_medium.py
agent/: __init__.py  demo.py  diagnostic_agent.py  memory.py  recovery_agent.py  run_episode.py
docs/: ACTION_SPEC.md  DEPLOYMENT_SPEC.md  DESIGN_CONSTRAINTS.md  GRPO_ADAPTER.md  OBSERVATION_SPEC.md  PITCH_CONTEXT.md  REASONING_SPEC.md  REWARD_LOGIC.md  SYSTEM_OVERVIEW.md  TEST_PLAN.md  VISUALIZATION_GUIDE.md  WHAT_NOT_TO_BUILD.md  component-diagram.mmd  system-architecture.md
grpo_qwen3_final/: adapter_config.json
models/grpo_titan_final/: README.md  adapter_config.json
notebooks/: grpo_qwen3_training.ipynb
scripts/: _runtime_min_test.py  compare_baselines.py  hardening_check.py  noop_agent.py  print_scores.py  random_agent.py  test_queue_direct.py  validate-submission.sh  verify_recovery.py
server/: __init__.py  app.py  run.py  titan_api.py
titan_env/: __init__.py
training/: train_ppo.py
visualization/: README.md
(+47 files in other folders)
