[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TITAN-env"
version = "0.1.0"
description = "OpenEnv wrapper package for TITAN fault recovery environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.2.0",
  "numpy",
  "pydantic",
  "openai>=1.0.0",
]

[project.scripts]
server = "TITAN_env.server.app:main"

[project.entry-points."openenv.envs"]
TITAN = "TITAN_env.interface.openenv_wrapper:TITANEnv"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["TITAN_env*"]
